fixes page wrapping

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -287,7 +287,7 @@ h5 {
 
 .hero-about {
   background: #981d20;
-  padding: 40px;
+  padding: 40px 0;
   h4 {
     color: #fff;
     border-bottom: 0;
